--- a/jsp/intellij/Todo/Todo/build.gradle
+++ b/jsp/intellij/Todo/Todo/build.gradle
@@ -28,6 +28,19 @@ dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
     implementation group : 'jstl', name: 'jstl', version: '1.2';
+
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.31'
+
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
+
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.19.0'
+
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
+
+    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.19.0'
 }
 
 test {
