--- a/jsp/intellij/Todo/Todo/build.gradle
+++ b/jsp/intellij/Todo/Todo/build.gradle
@@ -31,14 +31,17 @@ dependencies {
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.31'
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
 
+    implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
+
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
     testCompileOnly 'org.projectlombok:lombok:1.18.22'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.19.0'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
-    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.19.0'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.16.0'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.16.0'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.16.0'
 
     implementation group: 'org.springframework', name: 'spring-core', version: '5.3.16'
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.16'
