--- a/spring/intellij/SpringMVC/build.gradle
+++ b/spring/intellij/SpringMVC/build.gradle
@@ -33,6 +33,14 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.16'
 
 
+    // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
+    implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
+
+
+
 
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
@@ -44,7 +52,6 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.16.0'
 
     implementation group: 'jstl', name: 'jstl', version: '1.2'
-
 }
 
 test {
