--- a/spring/intellij/Dept/build.gradle
+++ b/spring/intellij/Dept/build.gradle
@@ -27,13 +27,27 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
+
+
     implementation group: 'org.springframework', name: 'spring-core', version: '5.3.16'
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.16'
     implementation group: 'org.springframework', name: 'spring-test', version: '5.3.16'
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.16'
 
+
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.31'
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
+
+    implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.3.19'
+    implementation group: 'org.springframework', name: 'spring-tx', version: '5.3.19'
+    implementation 'org.mybatis:mybatis:3.5.9'
+    implementation 'org.mybatis:mybatis-spring:2.0.7'
+
+
+
     implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
     implementation group: 'commons-io', name: 'commons-io', version: '2.5'
+
 
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
@@ -46,14 +60,11 @@ dependencies {
 
     implementation group: 'jstl', name: 'jstl', version: '1.2'
 
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.31'
-    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
 
-    implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.3.19'
-    implementation group: 'org.springframework', name: 'spring-tx', version: '5.3.19'
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-validator
+    implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.1.Final'
 
-    implementation 'org.mybatis:mybatis:3.5.9'
-    implementation 'org.mybatis:mybatis-spring:2.0.7'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0'
 
 }
 
