--- a/spring/Boot/SpringBootBoard/src/main/resources/application.properties
+++ b/spring/Boot/SpringBootBoard/src/main/resources/application.properties
@@ -20,21 +20,21 @@ spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.max-lifetime=1800000
 
 
-# JPA Set
-# DDL ????
-spring.jpa.hibernate.ddl-auto=update
-# ?? ???? sql ??
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
-# JAP ???? SQL ??
 spring.jpa.show-sql=true
+
+
 
 # Log4j2
 logging.level.org.springframework=info
 logging.level.com.app.board=info
 logging.level.com.app.board.mapper=trace
+logging.level.org.springframework.security=trace
 
 
 # Mybatis :  mapper-location
 mybatis.mapper-locations=mybatis/mapper/*.xml
 
 server.servlet.session.tracking-modes=cookie
+#server.servlet.session.tracking-modes=cookie
