--- a/spring/Boot/SpringSecurity/src/main/resources/application.properties
+++ b/spring/Boot/SpringSecurity/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
+
 # Datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/proj
@@ -20,10 +21,11 @@ spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.max-lifetime=1800000
 
 
-# JPA Set
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+
 
 # Log4j2
 logging.level.org.springframework=info
@@ -31,11 +33,7 @@ logging.level.com.app.springsecurity=debug
 
 logging.level.org.springframework.security=trace
 
-#logging.level.com.app.springsecurity.mapper=trace
 
 
-# Mybatis :  mapper-location
-mybatis.mapper-locations=mybatis/mapper/*.xml
-
-server.servlet.session.tracking-modes=cookie
+#logging.level.com.app.board.mapper=trace
 
